[project]
name = "zm02"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "koki298", email = "sada.200408@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
zm02 = "zm02.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
